chore(server): 移除角色初始化控制器
